This file documents the revision history for the SNClient+ agent.

next:
         - enable script aliases without enabling external scripts
         - check_files: fix max-depth and empty-syntax

0.20     Fri Mar 15 14:12:35 CET 2024
         - add support for perf-syntax
         - check_wmi: add performance data
         - check_wmi: add support for empty-syntax
         - update check_nsc_web to v0.7.1
         - check_service: fix json error
         - update windows build framework to wix 3.14
         - improve wmi stability
         - add regexp replacement macro post processor
         - add if/else conditionals to *-syntax templates
         - check_drivesize: does not use parent folder anymore automatically. Use folder=...if required
         - fix windows ps1 wrapped scripts
         - check_ntp_offset: add support for other languages
         - fix timeout for checks over nrpe

0.19     Wed Feb 28 00:09:39 CET 2024
         - write startup errors to default logfile
         - add check_os_updates
         - check_files: fix skipping folder to early
         - check_eventlog: fix using event id
         - check_drivesize: add freespace-ignore-reserved option
         - fix wrapped scripts not found
         - fix check_drivesize using random volume for sub path
         - fix check_drivesize using root folder when checking non-existing path
         - fix perf-config when using REST API
         - fix timeout handling (fixes #96)

0.18     Wed Feb 14 15:36:38 CET 2024
         - fix crash on windows when parsing empty args (#88)
         - check_ntp_offset: support more ntpq tally codes

0.17     Thu Feb  1 16:32:04 CET 2024
         - support += operator in config files
         - create logfile folder unless it exists
         - update windows exporter to 0.25.1
            - i386 still uses 0.24 since thats the last supported version
         - fix check_process username being empty sometimes
         - fix check_cpu_utilization calculation